[gd_scene load_steps=12 format=3 uid="uid://d1mcjh1unhuxm"]

[ext_resource type="PackedScene" uid="uid://b72bwutmwgfog" path="res://Player.tscn" id="1_player"]
[ext_resource type="Script" uid="uid://emfcxjr4qmu0" path="res://Wyoming.gd" id="1_wyoming"]
[ext_resource type="TileSet" uid="uid://g1ov1hyr14v8" path="res://tileset_brown.tres" id="2_tileset"]
[ext_resource type="Script" uid="uid://d46q3asgolav" path="res://SkyTileManager.gd" id="3_sky_manager"]
[ext_resource type="PackedScene" path="res://Door.tscn" id="5_door"]
[ext_resource type="AudioStream" uid="uid://dqaqe4647lv77" path="res://Assets/Dead.mp3" id="7_theme"]
[ext_resource type="PackedScene" path="res://SceneTransition.tscn" id="8_transition"]
[ext_resource type="PackedScene" uid="uid://keybulb001" path="res://KeyBulb.tscn" id="9_keybulb"]
[ext_resource type="PackedScene" path="res://Antichrist.tscn" id="10_antichrist"]
[ext_resource type="PackedScene" uid="uid://keywall001" path="res://KeyWall.tscn" id="11_keywall"]
[ext_resource type="PackedScene" uid="uid://edgcswec8jwo" path="res://DashBulb.tscn" id="12_dashbulb"]

[node name="Wyoming" type="Node2D"]
script = ExtResource("1_wyoming")

[node name="SkyTileManager" type="Node2D" parent="."]
z_index = -100
script = ExtResource("3_sky_manager")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_tileset")
format = 2
layer_0/tile_data = PackedInt32Array(262129, 0, 0, 327665, 0, 1, 262130, 0, 0, 327666, 0, 0, 262131, 0, 0, 327667, 0, 0, 262132, 0, 0, 327668, 0, 0, 262133, 0, 0, 327669, 0, 0, 262134, 0, 0, 327670, 0, 0, 262135, 0, 0, 327671, 0, 0, 262136, 0, 0, 327672, 0, 0, 262137, 0, 0, 327673, 0, 0, 262138, 0, 0, 327674, 0, 0, 262139, 0, 0, 327675, 0, 0, 262140, 0, 0, 327676, 0, 0, 262141, 0, 0, 327677, 0, 0, 262142, 0, 0, 327678, 0, 0, 262143, 0, 0, 327679, 0, 0, 196608, 0, 0, 262144, 0, 0, 196609, 0, 0, 262145, 0, 0, 196610, 0, 0, 262146, 0, 0, 196611, 0, 0, 262147, 0, 0, 196612, 0, 0, 262148, 0, 0, 196613, 0, 0, 262149, 0, 0, 196614, 0, 0, 262150, 0, 0, 196615, 0, 0, 262151, 0, 0, 196616, 0, 0, 262152, 0, 0, 196617, 0, 0, 262153, 0, 0, 196618, 0, 0, 262154, 0, 0, 196619, 0, 0, 262155, 0, 0, 196620, 0, 0, 262156, 0, 0, 196621, 0, 0, 262157, 0, 0, 196622, 0, 0, 262158, 0, 0, 196623, 0, 0, 262159, 0, 0, 196624, 0, 0, 262160, 0, 0, 196625, 0, 0, 262161, 0, 0, 196626, 0, 0, 262162, 0, 0, 196627, 0, 0, 262163, 0, 0, 196628, 0, 0, 262164, 0, 0, 196629, 0, 0, 262165, 0, 1, 196630, 65536, 0, 262166, 65536, 1, -327599, 0, 0, -327598, 0, 0, -327597, 0, 0, -327596, 0, 0, -327595, 0, 0, -327594, 0, 0, -327593, 0, 0, -327592, 0, 0, -327591, 0, 0, -327590, 0, 0, -327589, 0, 0, -327588, 0, 0, -327587, 0, 0, -327586, 0, 0, -327585, 0, 0, -327584, 0, 0, -327583, 0, 0, -327582, 0, 0, -1703855, 0, 0, -1769391, 0, 0, -1834927, 0, 0, -1900463, 0, 0, -1965999, 0, 0, -2031535, 0, 0, -2097071, 0, 0, -2162607, 0, 0, -2228143, 0, 0, -2293679, 0, 0, -2359215, 0, 0, -2424751, 0, 0, -2490287, 0, 0, -2555823, 0, 0, -2621359, 0, 0, -2686895, 0, 0, -2752431, 0, 0, -2817967, 0, 0, -2883503, 0, 0, -2949039, 0, 0, -3014575, 0, 0, -3080111, 0, 0, -3145647, 0, 0, -3211183, 0, 0, -3276719, 0, 0, -3342255, 0, 0, -3407791, 0, 0, -3473327, 0, 0, -3538863, 0, 0, -3604399, 0, 0, -3669935, 0, 0, -3735471, 0, 0, -3801007, 0, 0, -327581, 0, 0, -327580, 0, 0, -327579, 0, 0, -327578, 0, 0, -982916, 0, 0, -917380, 0, 0, -851844, 0, 0, -786308, 0, 0, -720772, 0, 0, -655236, 0, 0, -589700, 0, 0, -524164, 0, 0, -458628, 0, 0, -393092, 0, 0, -327556, 0, 0, -262020, 0, 0, -196484, 0, 0, -130948, 0, 0, -65412, 0, 0, 124, 0, 0, 65660, 0, 0, 131196, 0, 0, 196732, 0, 0, 262268, 0, 0, 327804, 0, 0, 393340, 0, 0, 458876, 0, 0, 524412, 0, 0, 589948, 0, 0, 655484, 0, 0, 721020, 0, 0, 786556, 0, 0, 852092, 0, 0, 917628, 0, 0, -262042, 0, 0, -196506, 0, 0, -130970, 0, 0, -65434, 0, 0, 102, 0, 0, 65638, 0, 0, 131174, 0, 0, 196710, 0, 0, 262246, 0, 0, 327782, 0, 0, 393318, 0, 0, 458854, 0, 0, 524390, 0, 0, 589926, 0, 0, 655462, 0, 0, 720998, 0, 0, 786534, 0, 0, 852070, 0, 0, 917606, 0, 0, 983142, 0, 0, 1048678, 0, 0, 1114214, 0, 0, -2818127, 0, 0, -2818126, 0, 0, -2818125, 0, 0, -2818124, 0, 0, -2818123, 0, 0, -2818122, 0, 0, -2818121, 0, 0, -2818120, 0, 0, -2818119, 0, 0, -2818118, 0, 0, -2883654, 0, 0, -2883653, 0, 0, -2883652, 0, 0, -2883651, 0, 0, -2818116, 0, 0, -2818117, 0, 0, -2883655, 0, 0, -2883656, 0, 0, -2883657, 0, 0, -2883658, 0, 0, -2883659, 0, 0, -2883660, 0, 0, -2883661, 0, 0, -2883662, 0, 0, -2883663, 0, 0, -2883664, 0, 0, -2818128, 0, 0, -2818096, 0, 0, -2752560, 0, 0, -2687024, 0, 0, -2621488, 0, 0, -2555952, 0, 0, -2490416, 0, 0, -2424880, 0, 0, -2359344, 0, 0, -2293808, 0, 0, -2228272, 0, 0, -2162736, 0, 0, -655406, 0, 0, -655405, 0, 0, -655404, 0, 0, -655403, 0, 0, -655402, 0, 0, -655401, 0, 0, -655400, 0, 0, -655399, 0, 0, -655398, 0, 0, -655397, 0, 0, -655396, 0, 0, -655395, 0, 0, -655394, 0, 0, -655393, 0, 0, -655392, 0, 0, -655391, 0, 0, -655390, 0, 0, -655389, 0, 0, -655388, 0, 0, -655387, 0, 0, -655386, 0, 0, -655385, 0, 0, -655384, 0, 0, -655383, 0, 0, -720919, 0, 0, -786455, 0, 0, -851991, 0, 0, -917527, 0, 0, -983063, 0, 0, -1048599, 0, 0, -1114135, 0, 0, -1179671, 0, 0, -1245207, 0, 0, -1310743, 0, 0, -1376279, 0, 0, -1441815, 0, 0, -1507351, 0, 0, -1572887, 0, 0, -1769495, 0, 0, -1835031, 0, 0, -1900567, 0, 0, -1966103, 0, 0, -2031639, 0, 0, -2097175, 0, 0, -2162711, 0, 0, -2228247, 0, 0, -1638423, 0, 0, -1703959, 0, 0, -3080325, 0, 0, -3080324, 0, 0, -3080323, 0, 0, -3080322, 0, 0, -3080321, 0, 0, -3080320, 0, 0, -3080319, 0, 0, -3014783, 0, 0, -3014785, 0, 0, -3014786, 0, 0, -3014787, 0, 0, -3014788, 0, 0, -3014789, 0, 0, -3014784, 0, 0, -2883632, 0, 0, -2949168, 0, 0, -3014704, 0, 0, -3080240, 0, 0, -3145776, 0, 0, -3211312, 0, 0, -3276848, 0, 0, -3342384, 0, 0, -3407920, 0, 0, -3473456, 0, 0, -3538992, 0, 0, -3604528, 0, 0, -3670064, 0, 0, -3735600, 0, 0, -3801136, 0, 0, -4063280, 0, 0, -4128816, 0, 0, -4194352, 0, 0, -3997744, 0, 0, -3932208, 0, 0, -3866672, 0, 0, -4456496, 0, 0, -4390960, 0, 0, -4325424, 0, 0, -4259888, 0, 0, 1179750, 0, 0, 1245286, 0, 0, 1310822, 0, 0, 1376358, 0, 0, 1441894, 0, 0, 1507430, 0, 0, 1572966, 0, 0, 1638502, 0, 0, 2490476, 0, 0, 2490477, 0, 0, 2490478, 0, 0, 2490479, 0, 0, 2490480, 0, 0, 2490481, 0, 0, 2490482, 0, 0, 2490483, 0, 0, 2490484, 0, 0, 2490485, 0, 0, 2490486, 0, 0, 2490487, 0, 0, 2490488, 0, 0, 917656, 0, 0, 983192, 0, 0, 1048728, 0, 0, 1114264, 0, 0, 1179800, 0, 0, 1245336, 0, 0, 1310872, 0, 0, 1376408, 0, 0, 1441944, 0, 0, 1507480, 0, 0, 1573016, 0, 0, 1638552, 0, 0, 1638553, 0, 0, 1638554, 0, 0, 1638555, 0, 0, 1638556, 0, 0, 1638557, 0, 0, 1638558, 0, 0, 1638559, 0, 0, 1638560, 0, 0, 1638561, 0, 0, 1638562, 0, 0, 1638563, 0, 0, 1638564, 0, 0, 1638565, 0, 0, 1638566, 0, 0, 1638567, 0, 0, 1638568, 0, 0, 1638569, 0, 0, 1638570, 0, 0, 1638571, 0, 0, 1638572, 0, 0, 1638573, 0, 0, 1441985, 0, 0, 1507521, 0, 0, 1573057, 0, 0, 1638593, 0, 0, 1704129, 0, 0, 1769665, 0, 0, 1835201, 0, 0, 1900737, 0, 0, 1966273, 0, 0, 2031809, 0, 0, 1704088, 0, 0, 1769624, 0, 0, 1835160, 0, 0, 1900696, 0, 0, 1966232, 0, 0, 2031768, 0, 0, 2097304, 0, 0, 2162840, 0, 0, 2228376, 0, 0, 2293912, 0, 0, 2359448, 0, 0, 2424984, 0, 0, 2424993, 1, 0, 2424994, 1, 0, 2424995, 1, 0, 2424996, 1, 0, 2424997, 1, 0, 2424998, 1, 0, 2424999, 1, 0, 2425000, 1, 0, 2425001, 1, 0, 2425002, 1, 0, 2425016, 1, 0, 2425017, 1, 0, 2425018, 1, 0, 2425003, 1, 0, 2425004, 1, 0, 2425005, 1, 0, 2425006, 1, 0, 2425007, 1, 0, 2425008, 1, 0, 2425009, 1, 0, 2425010, 1, 0, 2425011, 1, 0, 2425012, 1, 0, 2425013, 1, 0, 2425014, 1, 0, 2425015, 1, 0, -3735632, 0, 0, -3801168, 0, 0, -3866704, 0, 0, -3932240, 0, 0, -3997776, 0, 0, -4063312, 0, 0, -4128848, 0, 0, -4194384, 0, 0, -4259920, 0, 0, -4259919, 0, 0, -4194383, 0, 0, -4128847, 0, 0, -4063311, 0, 0, -3997775, 0, 0, -3932239, 0, 0, -3866703, 0, 0, -3801167, 0, 0, -3735631, 0, 0, 2424992, 1, 0, 2424991, 1, 0, 3211417, 0, 0, 3211418, 0, 0, 3211419, 0, 0, 3211420, 0, 0, 3211421, 0, 0, 3211422, 0, 0, 3211423, 0, 0, -2621520, 0, 0, -2687056, 0, 0, -2752592, 0, 0, -2555984, 0, 0, -2490448, 0, 0, -2424912, 0, 0, -2359376, 0, 0, -2293840, 0, 0, -2228304, 0, 0, -2162768, 0, 0, -2097232, 0, 0, -2031696, 0, 0, -1966160, 0, 0, -1900624, 0, 0, -1835088, 0, 0, -1769552, 0, 0, -1704016, 0, 0, -1638480, 0, 0, -1572944, 0, 0, -1507408, 0, 0, -4325456, 0, 0, -4325455, 0, 0, -4390991, 0, 0, -4390992, 0, 0, -4456528, 0, 0, -4522064, 0, 0, -4522063, 0, 0, -4522062, 0, 0, -4522061, 0, 0, -4522060, 0, 0, -4522059, 0, 0, -4522058, 0, 0, -4522057, 0, 0, -4522056, 0, 0, -4522055, 0, 0, -4522054, 0, 0, -4522053, 0, 0, -4522052, 0, 0, -4522051, 0, 0, -4522050, 0, 0, -4522049, 0, 0, -4522048, 0, 0, -4522047, 0, 0, -4522046, 0, 0, -4522045, 0, 0, -4522044, 0, 0, -4522043, 0, 0, -4522042, 0, 0, -4522041, 0, 0, -4522040, 0, 0, -4522039, 0, 0, -4522038, 0, 0, -4522037, 0, 0, -4522036, 0, 0, -4522035, 0, 0, -4522034, 0, 0, -4522033, 0, 0, -4522032, 0, 0, -4456527, 0, 0, -1441872, 0, 0, -1376336, 0, 0, -1310800, 0, 0, -1245264, 0, 0, -1179728, 0, 0, -1114192, 0, 0, -1048656, 0, 0, -983120, 0, 0, -917584, 0, 0, -852048, 0, 0, -786512, 0, 0, -720976, 0, 0, -655440, 0, 0, -589903, 0, 0, -524367, 0, 0, -458831, 0, 0, -393295, 0, 0, -327759, 0, 0, -262223, 0, 0, -196687, 0, 0, -131151, 0, 0, -65615, 0, 0, -79, 0, 0, 65457, 0, 0, 130993, 0, 0, 262065, 0, 0, 327601, 0, 0, 393137, 0, 0, 458673, 0, 0, 524209, 0, 0, 589745, 0, 0, 655281, 0, 0, 720817, 0, 0, 786353, 0, 0, 655280, 0, 0, -589904, 0, 0, -524368, 0, 0, -458832, 0, 0, -393296, 0, 0, -327760, 0, 0, -262224, 0, 0, -196688, 0, 0, -131152, 0, 0, -65616, 0, 0, -80, 0, 0, 65456, 0, 0, 130992, 0, 0, 196528, 0, 0, 262064, 0, 0, 327600, 0, 0, 393136, 0, 0, 458672, 0, 0, 524208, 0, 0, 589744, 0, 0, 720816, 0, 0, 786352, 0, 0, 2490520, 0, 0, 2556056, 0, 0, 2621592, 0, 0, 2687128, 0, 0, 2752664, 0, 0, 2818200, 0, 0, 2883736, 0, 0, 2949272, 0, 0, 3014808, 0, 0, 3080344, 0, 0, 3145880, 0, 0, 3211416, 0, 0, 3211424, 0, 0, 3211425, 0, 0, 3211426, 0, 0, 3211427, 0, 0, 3211428, 0, 0, 3211429, 0, 0, 3211430, 0, 0, 3211431, 0, 0, 3211432, 0, 0, 3211433, 0, 0, 3211434, 0, 0, 3211435, 0, 0, 3211436, 0, 0, 3211437, 0, 0, 3211438, 0, 0, 3211439, 0, 0, 3211440, 0, 0, 3211441, 0, 0, 3211442, 0, 0, 3211443, 0, 0, 3211444, 0, 0, 3211445, 0, 0, 3211446, 0, 0, 3211447, 0, 0, 3211448, 0, 0, 3211449, 0, 0, 262127, 1, 0, 262126, 1, 0, 262125, 1, 0, 262124, 1, 0, 262123, 1, 0, 262122, 1, 0, 262121, 1, 0, 262120, 1, 0, 262119, 1, 0, 262118, 1, 0, 262117, 1, 0, 262116, 1, 0, 262115, 1, 0, 262114, 1, 0, 262113, 1, 0, 262112, 1, 0, 262111, 1, 0, 262110, 1, 0, 262109, 1, 0, 262108, 1, 0, 262107, 1, 0, 262106, 1, 0, 262105, 1, 0, 262104, 1, 0, 262093, 1, 0, 262092, 1, 0, 262091, 1, 0, 262090, 1, 0, 262089, 1, 0, 262088, 1, 0, 262087, 1, 0, 262086, 1, 0, 262085, 1, 0, 262084, 1, 0, 262083, 1, 0, 262082, 1, 0, 262081, 1, 0, 262080, 1, 0, 262079, 1, 0, 262078, 1, 0, 262066, 1, 0, 262070, 1, 0, 262071, 1, 0, 262072, 1, 0, 262073, 1, 0, 262076, 1, 0, 262077, 1, 0, 262075, 1, 0, 262074, 1, 0, 262068, 1, 0, 262067, 1, 0, 262094, 1, 0, 262095, 1, 0, 262096, 1, 0, 262097, 1, 0, 262098, 1, 0, 262099, 1, 0, 262100, 1, 0, 262101, 1, 0, 262102, 1, 0, 262103, 1, 0, 262069, 1, 0, 196529, 0, 0, 3211450, 0, 0, 3211451, 0, 0, 3211452, 0, 0, 3211453, 0, 0, 3211454, 0, 0, 3211455, 0, 0, 3211456, 0, 0, 3211457, 0, 0, 3211460, 0, 0, 3211461, 0, 0, 3211462, 0, 0, 3211463, 0, 0, 3211464, 0, 0, 3211465, 0, 0, 3211466, 0, 0, 3211467, 0, 0, 3211468, 0, 0, 3211469, 0, 0, 3211470, 0, 0, 3211471, 0, 0, 3211472, 0, 0, 3211458, 0, 0, 3211459, 0, 0, 2359508, 0, 0, 2425044, 0, 0, 2490580, 0, 0, 2556116, 0, 0, 2621652, 0, 0, 2687188, 0, 0, 2752724, 0, 0, 2818260, 0, 0, 2883796, 0, 0, 2949332, 0, 0, 1310913, 0, 0, 1245377, 0, 0, 1179841, 0, 0, 1114305, 0, 0, 1048769, 0, 0, 983233, 0, 0, 917697, 0, 0, 852161, 0, 0, 786625, 0, 0, 721089, 0, 0, 655553, 0, 0, 590017, 0, 0, 524481, 0, 0, 458945, 0, 0, 393409, 0, 0, 327873, 0, 0, 262337, 0, 0, 1376449, 0, 0, -1244991, 0, 0, -1179455, 0, 0, -1113919, 0, 0, -1048383, 0, 0, -982847, 0, 0, -917311, 0, 0, -851775, 0, 0, -786239, 0, 0, -720703, 0, 0, -655167, 0, 0, -589631, 0, 0, -524095, 0, 0, -458559, 0, 0, -393023, 0, 0, 193, 0, 0, 65729, 0, 0, 131265, 0, 0, 196801, 0, 0, -65343, 0, 0, -130879, 0, 0, -196415, 0, 0, -261951, 0, 0, -327487, 0, 0, -1703743, 0, 0, -1638207, 0, 0, -1572671, 0, 0, -1507135, 0, 0, -1441599, 0, 0, -1376063, 0, 0, -1310527, 0, 0, -1965887, 0, 0, -1900351, 0, 0, -1834815, 0, 0, -1769279, 0, 0, 2425020, 1, 0, 2425019, 1, 0, 2425021, 1, 0, 2425022, 1, 0, 2425023, 1, 0, 2097345, 65536, 1, 2162881, 65536, 1, 2228417, 65536, 1, 2293953, 65536, 1, 2359489, 65536, 1, 2425025, 65536, 1, 2425024, 1, 0)

[node name="Player" parent="." instance=ExtResource("1_player")]
position = Vector2(-4163, -1574)

[node name="KeyBulb2" parent="." instance=ExtResource("9_keybulb")]
position = Vector2(2062, -338)

[node name="KeyBulb3" parent="." instance=ExtResource("9_keybulb")]
position = Vector2(1263, -146)

[node name="ExitDoor" parent="." instance=ExtResource("5_door")]
position = Vector2(-410, 27)

[node name="Antichrist" parent="." instance=ExtResource("10_antichrist")]
position = Vector2(4983, 1547)

[node name="KeyWall" parent="." instance=ExtResource("11_keywall")]
position = Vector2(2625, -498)
scale = Vector2(1, 3.5)

[node name="DashBulb1" parent="." instance=ExtResource("12_dashbulb")]
position = Vector2(-3335, -843)

[node name="DashBulb3" parent="." instance=ExtResource("12_dashbulb")]
position = Vector2(-3429, -537)

[node name="DashBulb2" parent="." instance=ExtResource("12_dashbulb")]
position = Vector2(4403, 841)

[node name="DashBulb4" parent="." instance=ExtResource("12_dashbulb")]
position = Vector2(7854, 866)

[node name="KeyBulb4" parent="." instance=ExtResource("9_keybulb")]
position = Vector2(-3249, -1687)

[node name="KeyWall2" parent="." instance=ExtResource("11_keywall")]
position = Vector2(-2525, -1632)
scale = Vector2(1, 2)

[node name="KeyBulb5" parent="." instance=ExtResource("9_keybulb")]
position = Vector2(5491, 1018)

[node name="KeyWall3" parent="." instance=ExtResource("11_keywall")]
position = Vector2(4990, 1217)
rotation = 1.5708

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_theme")
volume_db = -10.0
autoplay = true

[node name="SceneTransition" parent="." instance=ExtResource("8_transition")]
